--- a/quarta.html
+++ b/quarta.html
@@ -4,32 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treino</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
-        p {
-            text-align: justify;
-        }
-        .exercise {
-            margin-bottom: 30px;
-        }
-        .exercise img {
-            width: 300px;
-            height: auto;
-            display: block;
-            margin: 10px 0;
-        }
-
-        button {
-            background-color: rgb(39, 223, 100);
-        }
-    </style>
+    <link rel="stylesheet" href="styleexercicios.css">
 </head>
 
 <body>
