--- a/quinta.html
+++ b/quinta.html
@@ -4,43 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treino</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
-        p {
-            text-align: justify;
-        }
-
-        .exercise {
-            margin-bottom: 30px;
-        }
-        .exercise img {
-            width: 300px;
-            height: auto;
-            display: block;
-            margin: 10px 0;
-        }
-
-        button {
-            background-color: rgb(238, 118, 202);
-        }
-    </style>
+    <link rel="stylesheet" href="styleexercicios.css">
 </head>
 
 <body>
-    <h1>Treino Rose Docinho</h1>
-    <hr>
+    <div >
+        <h1>Treino Rose Docinho</h1>
+        <hr>
 
-    <a href="index.html">
+        <a href="index.html">
         <button>Voltar</button>
-    </a>
-
+        </a>
+    </div>
     <div class="exercise">
 
         <h2>Superiores e Abdômen 2 </h2>
