--- a/segunda.html
+++ b/segunda.html
@@ -12,7 +12,7 @@
         <h1>Treino Rose Docinho</h1>
         <hr>
 
-        <a href="index.html">
+        <a href="paginas.html">
             <button>Voltar</button>
         </a>
     </div>
