--- a/sexta.html
+++ b/sexta.html
@@ -13,7 +13,7 @@
         <h1>Treino Rose Docinho</h1>
         <hr>
 
-        <a href="index.html">
+        <a href="paginas.html">
             <button>Voltar</button>
         </a>
     </div>
