--- a/terca.html
+++ b/terca.html
@@ -11,7 +11,7 @@
     <h1>Treino Rose Docinho</h1>
     <hr>
 
-    <a href="index.html">
+    <a href="paginas.html">
         <button>Voltar</button>
     </a>
 
